[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.black]
extend-exclude = """
EAB_tools/tools.py  # Just some old code for reference
"""
target-version = ['py39', 'py310']

[tool.isort]
# Most settings are barrowed from pandas
# https://github.com/pandas-dev/pandas/blob/f4ca4d3d0ea6a907262f8c84/pyproject.toml#L143
atomic = true
combine_as_imports = true
extend_skip_glob = ["*/EAB_tools/tools.py", ]
force_grid_wrap = 2
force_sort_within_sections = true
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules --no-flaky-report --random-order-seed=0 -m 'not slow'"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE"
]
markers = [
    "slow: mark a test as slow",
]
minversion = "6.0"
required_plugins = "flaky pytest-random-order"
xfail_strict = true
