[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.black]
extend-exclude = """
EAB_tools/tools.py  # Just some old code for reference
"""
target-version = ['py39', 'py310']

[tool.isort]
# Most settings are barrowed from pandas
# https://github.com/pandas-dev/pandas/blob/f4ca4d3d0ea6a907262f8c84/pyproject.toml#L143
atomic = true
combine_as_imports = true
extend_skip_glob = ["*/EAB_tools/tools.py", ]
force_grid_wrap = 2
force_sort_within_sections = true
profile = "black"

[tool.mypy]
# When in doubt, borrowed from pandas
# https://github.com/pandas-dev/pandas/blob/417d1c94fe3810f695e94360a/pyproject.toml#L66
# Import discovery
exclude = '''(?x)(
    EAB_tools/tools.py
)'''
ignore_missing_imports = true
# Untyped definitions and calls
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_any_generics = true
# None and Optional handling
no_implicit_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
# Miscellaneous strictness flags
strict_equality = true
# Configuring error messages
pretty = true
show_error_codes = true

[tool.pydocstyle]
convention = "numpy"
match = '''(?x)
(?!  # Does NOT begin with:
test_.*  # Ignore tests
|conftest  # and ignore conftest.pt
|__init__  # Ignore __init__.py files
|tools  # Ignore unused tools.py
|setup
)
.*\.py
'''

[tool.pytest.ini_options]
addopts = "--doctest-modules --no-flaky-report --random-order-seed=0 -m 'not slow'"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE"
]
markers = [
    "slow: mark a test as slow",
]
minversion = "6.0"
required_plugins = "flaky pytest-random-order"
xfail_strict = true
